[gd_scene load_steps=4 format=3 uid="uid://bsge0pejfu1df"]

[ext_resource type="Script" path="res://game_over.gd" id="1_xub6q"]
[ext_resource type="AudioStream" uid="uid://buiqmmy5v2qgi" path="res://Monster-1.wav" id="2_6lkoq"]
[ext_resource type="AudioStream" uid="uid://bi3hc8b6sidut" path="res://lose music 1 - 1_0.wav" id="3_3iboh"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_xub6q")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 279.0
offset_top = 273.0
offset_right = 566.0
offset_bottom = 360.0
scale = Vector2(2.1743, 1.71314)
theme_override_colors/font_color = Color(1, 0.101961, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Game Over,
Press 'R' to go again"
horizontal_alignment = 1

[node name="FinalTimeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 263.0
offset_top = 140.0
offset_right = 624.0
offset_bottom = 182.0
scale = Vector2(1.82663, 2.01396)
theme_override_font_sizes/font_size = 30
text = "final time should go here"
horizontal_alignment = 1

[node name="restartTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_6lkoq")
autoplay = true

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_3iboh")
autoplay = true

[connection signal="timeout" from="restartTimer" to="." method="_on_restart_timer_timeout"]
